--- a/documentation/html/doxygen_crawl.html
+++ b/documentation/html/doxygen_crawl.html
@@ -12,9 +12,13 @@
 <a href="finitedifference__mpi_8c_source.html"/>
 <a href="fit_8py_source.html"/>
 <a href="mpi_8sh_source.html"/>
+<a href="mpi_2plot_8py_source.html"/>
+<a href="openmp_2plot_8py_source.html"/>
+<a href="plot_8py_source.html"/>
+<a href="scale_8py_source.html"/>
+<a href="stream_8c_source.html"/>
 <a href="finitedifference__openmp_8c_source.html"/>
 <a href="openmp_8sh_source.html"/>
-<a href="plot_8py_source.html"/>
 <a href="finitedifference__serial_8c_source.html"/>
 <a href="serial_8sh_source.html"/>
 <a href="validate_8py_source.html"/>
@@ -22,9 +26,13 @@
 <a href="finitedifference__mpi_8c.html"/>
 <a href="fit_8py.html"/>
 <a href="mpi_8sh.html"/>
+<a href="mpi_2plot_8py.html"/>
+<a href="openmp_2plot_8py.html"/>
+<a href="plot_8py.html"/>
+<a href="scale_8py.html"/>
+<a href="stream_8c.html"/>
 <a href="finitedifference__openmp_8c.html"/>
 <a href="openmp_8sh.html"/>
-<a href="plot_8py.html"/>
 <a href="_r_e_a_d_m_e_8md.html"/>
 <a href="finitedifference__serial_8c.html"/>
 <a href="serial_8sh.html"/>
@@ -33,6 +41,7 @@
 <a href="namespacefinitedifference.html"/>
 <a href="namespacefit.html"/>
 <a href="namespaceplot.html"/>
+<a href="namespacescale.html"/>
 <a href="namespacevalidate.html"/>
 <a href="dir_161091916a0cca887cf663ec61c5350e.html"/>
 <a href="dir_8bd52bc3b1afa1673d49a8c2ff0196a0.html"/>
@@ -52,9 +61,15 @@
 <a href="namespacemembers.html"/>
 <a href="namespacemembers.html"/>
 <a href="namespacemembers.html"/>
+<a href="namespacemembers.html"/>
+<a href="namespacemembers.html"/>
+<a href="namespacemembers.html"/>
 <a href="namespacemembers_func.html"/>
 <a href="namespacemembers_func.html"/>
 <a href="namespacemembers_func.html"/>
+<a href="namespacemembers_vars.html"/>
+<a href="namespacemembers_vars.html"/>
+<a href="namespacemembers_vars.html"/>
 <a href="namespacemembers_vars.html"/>
 <a href="namespacemembers_vars.html"/>
 <a href="namespacemembers_vars.html"/>
@@ -74,11 +89,20 @@
 <a href="globals.html"/>
 <a href="globals.html"/>
 <a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
+<a href="globals_func.html"/>
+<a href="globals_defs.html"/>
+<a href="globals_defs.html"/>
+<a href="globals_defs.html"/>
+<a href="globals_defs.html"/>
+<a href="globals_defs.html"/>
 <a href="globals_defs.html"/>
 <a href="globals_defs.html"/>
 <a href="globals_defs.html"/>
